# ATOMiK

./: .gitignore  ATOMiK.gprj  ATOMiK_Development_Roadmap.md  CLAUDE.md  FUNDING_CONTEXT.md  FUNDING_PROMPTS.md  LICENSE  PHASE6_HARDWARE_SYNTHESIS.md  PHASE_4C_ROADMAP.md  PHASE_5_ROADMAP.md  README.md  SDK_API_REFERENCE.md  SDK_DEVELOPER_GUIDE.md  SDK_SCHEMA_GUIDE.md  T4A1_COMPLETION_REPORT.txt  generation_report.json  theory.md
software/: README.md  pyproject.toml
software/atomik_sdk/: README.md  __init__.py  bitstream_gen.py  cli.py  delta_stream.py  genome_compiler.py  hardware_discovery.py  motifs.py  pattern_matcher.py  terminal.py  voxel_encoder.py
software/atomik_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
software/atomik_sdk/generator/: README.md  __init__.py  c_generator.py  code_emitter.py  core.py  javascript_generator.py  namespace_mapper.py  python_generator.py  rust_generator.py  schema_validator.py  verilog_generator.py
software/atomik_sdk/pipeline/: __init__.py  consensus.py  controller.py  coordinator.py  dag.py  diagnosis.py  event_bus.py  feedback.py  orchestrator.py
software/atomik_sdk/pipeline/agents/: __init__.py  adaptive_router.py  complexity_scorer.py  context_compressor.py  prompt_cache.py  registry.py  router.py  self_correct.py  specialist.py  token_budget.py  token_predictor.py
software/atomik_sdk/pipeline/analysis/: __init__.py  diff_impact.py  field_diff.py  (+2 more)
software/atomik_sdk/tests/: conftest.py  test_adaptive_router.py  test_agent_registry.py  test_c_generation.py  test_cli_demo.py  test_consistency.py  test_deep_verify.py  test_domain_generation.py  test_error_kb.py  test_feedback.py  test_field_diff.py  test_from_source_pipeline.py  test_generator_core.py  test_generator_simple.py  test_hardware_discovery.py  test_integration.py  test_javascript_generation.py  test_metrics_analyzer.py  test_orchestrator.py  test_parallel_executor.py  test_pipeline_context.py  test_pipeline_controller.py  test_pipeline_diff.py  test_pipeline_hardware.py  test_pipeline_metrics.py  test_pipeline_verify.py  test_python_generation.py  test_rust_generation.py  test_schema_inferrer.py  test_self_optimizer.py  test_token_efficiency.py  test_verilog_generation.py
software/demos/state_sync_benchmark/: __init__.py  __main__.py  atomik_delta.py  benchmarks.py  conventional.py  report.py
software/tests/: __init__.py  test_delta_stream.py  test_motifs.py
(+623 files in other folders)
