[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomik-sdk"
version = "0.1.0"
description = "Python SDK for ATOMiK stateless delta-driven computational architecture"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "ATOMiK Project"}
]
keywords = [
    "video-processing",
    "delta-computation",
    "fpga",
    "motion-detection",
    "hardware-acceleration"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
video = [
    "opencv-python>=4.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
all = [
    "atomik-sdk[video,dev]",
]

[project.scripts]
atomik-gen = "atomik_sdk.cli:main"

[project.urls]
Homepage = "https://github.com/mopore/ATOMiK"
Documentation = "https://mopore.github.io/ATOMiK/"
Repository = "https://github.com/mopore/ATOMiK.git"
Issues = "https://github.com/mopore/ATOMiK/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["atomik_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["atomik_sdk"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
